# Yeditepe_mini_analysis

./: 22september_ZPrime_prediction.py  CMakeLists.txt  ML  README.md  ZPrime_prediction_secondpart  documented_ZPrime_prediction.py  read
ML/: ZPrime prediction involving XSection weight stuff (both modelling and prediction part together)  ZPrime_Prediction_Model_documented.py  ZPrime_prediction_12feature_model  ZPrime_prediction_ML  documented_ZPrime_prediction.py  documented_tree_reader.C
mini_analysis_7t/: Codes.txt  Makefile  analyzer.sh  analyzer.txt  exotic_filter_mc.sh  ressam
mini_analysis_7t/antibok/: normaliser  normaliser.cpp
mini_analysis_7t/src/: normaliser.cpp  tree_reader.C  umut_tree_reader.C
src/: CMakeLists.txt  tree_reader.cpp  tree_reader.h
util/: CMakeLists.txt  paint.cpp  runAll.sh  runner.cpp
